--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
   background-position: center;
   height: 100vh;
 }
-form { color: white}
+form { color: white }
 
-footer { color: white}
+small { color: white }
+
+a { color: white }
+
+details { color: white }
+
+footer { color: white }
