Now it's less {redacted}

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 { color: red; }
 div { color: orange; }
 body {
-  background-image: url(https://media.discordapp.net/attachments/902352548881661983/1062134610579959868/000111.png?width=616&height=469);
+  background-image: url(https://images2.alphacoders.com/969/thumb-1920-96952.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
